# AgroTech-Verde

./: .env  .gitignore  README.md  agroTech_data.csv  agrotech_data.csv  app.py  firebase_utils.py  label_encoder.pkl  main.py  modelo.py  modelo_rf.pkl  pyproject.toml  requirements.txt  retrain.py  retrain_for_streamlit.py  streamlit_app.py  style.css  test_supabase.py
.streamlit/: config.toml  packages.txt  secrets.toml  secrets.toml.example
data/: agroTech_data.csv
docs/: CONTRIBUTING.md  TECHNICAL.md
src/: __init__.py  app.py  app_backup.py  style.css
src/config/: __init__.py  config.py
src/models/: __init__.py  diagnose_models.py  fix_model.py  label_encoder.pkl  model.py  modelo_random_forest.pkl  preprocessor.pkl  retrain.py  train_model.py
src/services/: __init__.py  crop_normalizer.py  firebase_service.py  prediction_service.py  retraining_service.py  smart_retraining_service.py  supabase_service.py
src/utils/: __init__.py  validators.py
tests/: __init__.py  test_validators.py
